# FInCrime

./: .env.example  .gitignore  JAWABAN_FORM_PIDI_Tahap2.md  Makefile  PROPOSAL_STAGE_2_DRAFT.md  Proposal_Tahap_2_FinCrime.docx  README.md  docker-compose.yml  fc.cmd  fc.ps1  pyproject.toml  requirements-core.txt  requirements.txt  setup.ps1  ~$oposal_Tahap_2_FinCrime.docx
.claude/: settings.local.json
.github/workflows/: ci.yml  security.yml
airflow_dags/: README.md  fincrime_dags.py  fincrime_drift_check.py  fincrime_news_screening.py  fincrime_ofac_refresh.py  fincrime_retrain.py
data/: fincrime_audit.db  fincrime_cases.db  fincrime_metrics.db
docker/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker
docs/: STUDY_GUIDE.md  api.md  architecture.md  cbdc_garuda_alignment.md  deployment.md  devops.md  dummy_vs_real_comparison.md  pitch_deck_outline.md  real_data_guide.md
scripts/: build_proposal_docx.js  check_limits.py  fetch_real_blockchain.py  fetch_sanctions.py  generate_sample_data.py  generate_sample_ltkt.py  import_bank_csv.py  import_elliptic.py  read_cbdc_pdfs.py  read_guidebook.py  rename_brand.py  run_pipeline.py  score_real_data.py  search_guidebook.py  setup_etherscan_key.py  setup_neo4j.py  test_humanizer.py  test_privacy_coin.py  test_privacy_ui.py  test_wave1.py  test_wave2.py  test_wave3.py  test_wave4.py  train_all_models.py  train_elliptic_benchmark.py  train_with_mlflow.py
src/: __init__.py
src/api/: __init__.py  (+2 more)
tests/: conftest.py  test_api.py  test_layer0.py  test_layer1.py  test_layer2.py  test_layer3.py  test_schemas.py
(+93 files in other folders)
