[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fincrime-ai"
version = "0.1.0"
description = "End-to-End Financial Crime Intelligence System for Indonesia"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Andi Arif Abdillah", email = "andi@fincrime.id"},
    {name = "Raya Sesan Firdaus"},
    {name = "Rambu Ilalang"},
    {name = "TB Muhammad Fikri Arsyad"},
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external services",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Standalone scripts must insert the repo root into sys.path before they can
# import from src/, so module-level imports cannot all sit at the top.
"scripts/*" = ["E402"]
